<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/colorPrimaryDark"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        tools:context=".Activities_and_Fragments.SettingsMainActivity">

        <TextView
            android:id="@+id/settings_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="gotoScreen"
            android:text="@string/settings_header"
            android:textColor="@color/white"
            android:textSize="50sp" />


        <Button
            android:id="@+id/info_edit_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:onClick="gotoScreen"
            android:text="@string/settings_info_edit_btn"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/info_share_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:onClick="gotoScreen"
            android:text="@string/settings_info_share_btn"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/password_change_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:onClick="gotoScreen"
            android:text="@string/settings_password_change_btn"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/account_deactivate_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/red"
            android:drawableEnd="@drawable/ic_delete_black_24dp"
            android:drawablePadding="2dip"
            android:drawableTint="@color/white"
            android:paddingStart="30dip"
            android:paddingEnd="26dip"
            android:text="@string/settings_delete_account_btn"
            android:textColor="@color/white" />

    </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>