<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="60dp"
        app:cardBackgroundColor="@color/transparent"
        android:backgroundTint="@color/transparent"
        android:layout_marginTop="80dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="80dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:orientation="vertical"
            tools:context=".Activities_and_Fragments.Login">

            <TextView
                android:id="@+id/signup_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/user_name"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/person"
                android:hint="@string/username"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/password"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/lock"
                android:gravity="end|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <EditText
                android:textColor="@color/white"
                android:id="@+id/password_verify"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/rounded_edittext"
                android:drawableStart="@drawable/lock"
                android:gravity="end|center_vertical"
                android:hint="@string/verify_password"
                android:inputType="textPassword"
                android:paddingLeft="5dp"
                android:paddingRight="5dp" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/verify"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>