<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="250dp"

    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="8dp"
        android:text="@string/share_info_header"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="20dp"/>

    <View
        android:id="@+id/view1"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:background="@color/transparent_primary" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:textColor="@color/white"
        android:text="@string/agree"
        android:layout_marginBottom="12dp"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/view1"
        android:layout_marginTop="78dp"
        android:textColor="@color/white"
        android:background="@color/red"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="12dp"
        android:text="@string/dont_agree" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view1"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="5dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="האם את/ה בטוח/ה שברצונך לשתף מידע עם דוב כתום?" />

</RelativeLayout>