<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/texting_image"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentBlack">

        <TextView
            android:id="@+id/log_in_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/log_in_header"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="25sp" />


        <EditText
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:id="@+id/personal_code"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/personal_code"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/log_in_header"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:paddingRight="5dp"
            android:singleLine="true" />

        <TextView
            android:id="@+id/whats_this"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whats_this"
            android:gravity="center"
            android:textColor="@color/white"
            android:onClick="personalCodeInfo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personal_code"
            android:paddingTop="5dp"
            android:layout_gravity="end"/>
        
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_button"
            app:borderWidth="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="50dp"
            android:elevation="10dp"
            android:backgroundTint="@color/colorPrimary"
            android:src="@drawable/ic_arrow_left_white_24dp"
            />
        
    </android.support.constraint.ConstraintLayout>
</LinearLayout>